kube/settings/rails.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stg
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: destiny1616/nginx:v6
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: stg-pv
          mountPath: /var/lib/mysql 
        - name: empty-dir
          mountPath: /app/tmp/sockets
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          timeoutSeconds: 5
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          timeoutSeconds: 5
          initialDelaySeconds: 300
          periodSeconds: 30          
      - name: rails
        image: destiny161618/rails:v17
        imagePullPolicy: Always
        command: ["bundle", "exec", "puma", "-C", "config/puma.rb"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: stg-pv
          mountPath: /var/lib/mysql
        - name: empty-dir
          mountPath: /app/tmp/sockets
        - name: tz-config
          mountPath: /etc/localtime          
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          timeoutSeconds: 5
          initialDelaySeconds: 5
          periodSeconds: 30    
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          timeoutSeconds: 5
          initialDelaySeconds: 300
          periodSeconds: 30                     
      volumes:
      - name: stg-pv
        persistentVolumeClaim:
          claimName: stg-pvc
      - name: tz-config
        hostPath: 
          path: /usr/share/zoneinfo/Asia/Tokyo
      - name: empty-dir
        emptyDir: {}
