kube/settings/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stg
  name: mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stg
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  replicas: 1    
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: stg-pv
          mountPath: /var/lib/mysql  
      volumes:
      - name: stg-pv
        persistentVolumeClaim:
          claimName: stg-pvc
