kube/settings/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: stg
  name: rails-ing
spec:
  rules:
  - host: analyticshoon.com
    http:
      paths:
      - backend:
          serviceName: rails
          servicePort: 3000
